# kindle-input

./: LICENSE  README.md  config.toml
kindle-input-client/: .gitignore  meson.build
kindle-input-client/src/: main.cpp  main.ui.xml
kindle-input-client/src/sshManager/: usbNetManager.cpp
kindle-input-client/src/ttyStream/: commands.cpp  commands.h  inputStream.cpp  inputStream.h  manage.cpp  manage.h  setupUsb.cpp  setupUsb.h
kindle-input-client/src/ui/: controls.cpp  controls.h  drawArea.cpp  drawArea.h
kindle-input-desktop/: .gitignore  Makefile  config.toml
kindle-input-desktop/src/platform/linux/: generic.cpp  generic.h  sshConnect.cpp  ttyStream.cpp  ttyStream.h
src/: main.cpp
src/dependencies/: tomlParser.cpp  tomlParser.h
src/input/: handler.cpp  handler.h
src/platform/linux/: connection.cpp  injector.cpp  injector.h  sshConnect.h  ttyStream.cpp
src/platform/linux/networkFix/: patch.sh  reversePatch.sh
